# Robotdesign3_2022

./: CMakeLists.txt  README.md  package.xml  set_up_ros.sh
launch/: crane_x7_with_table.launch  view_d435_model_rviz_gazebo.launch
src/: debug_qt.py  detect_test2.cpp  detect_test3.cpp  detect_test4.cpp  detect_test5.cpp  not_simu_pick_and_place_in_gazebo_example.py  pick_and_place_in_gazebo_example.py  qt_basic1.cpp  transform.cpp  transform_test1.cpp
urdf/: crane_x7.urdf.xacro  crane_x7.xacro  crane_x7_arm.xacro  crane_x7_d435.xacro  d435.urdf.xacro
worlds/: table.world
