<?xml version="1.0"?>
<package>
  <name>build_blocks</name>
  <version>2.0.0</version>
  <description>The hand_test package</description>

  <maintainer email="shigeikuo@gmail.com">Ikuo Shige</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>                  
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>crane_x7_moveit_config</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <run_depend>crane_x7_moveit_config</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>joy</run_depend>

  <export>

  </export>
</package>
